feat: добавил разметку для отзывов

--- a/src/index.html
+++ b/src/index.html
@@ -542,6 +542,110 @@
           >
         </div>
       </section>
+      <section class="page_reviews reviews">
+        <div class="reviews__container">
+          <h2 class="reviews__title title">
+            Наших клиентов приходят по рекомендациям
+          </h2>
+          <div class="reviews__slider slider-reviews swiper">
+            <div class="swiper-wrapper slider-reviews__wrapper">
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_01.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «Я теплицей очень довольна. Мы с мужем долго советовались и взяли теплицу в Магазине теплиц №1. Объясню почему. Для меня не удобно ездить по магазинам и выбирать теплицы, на это уходит слишком много времени. Поэтому я начала искать теплицу через интернет. Ваш сайт мне сразу понравился, много выбора теплиц и сразу видно цену. Что меня очень привлекло это то, что теплицу можно оплатить после доставки. Привезли вовремя, теплица очень понравилась. Большое вам спасибо!»
+                  </p>
+                  <p class="slider-reviews__user-name">Светлана Недугова</p>
+                  <p class="slider-reviews__address">
+                    домохозяйка, п. Большое Козино, СНТ № 6 Берёзка
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_02.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «Теплица отличная. Разделили по полам, теперь в одной сторане сажаем помидоры, а в другой – огурцы. Брал в «Магазине-теплиц» по совету знакомых. Когда заказывал теплицу, акция шла с бесплатным парником. Спасибо за подарок.»
+                  </p>
+                  <p class="slider-reviews__user-name">Сергей Платонов</p>
+                  <p class="slider-reviews__address">
+                    госслужащий, г.Нижний Новгород, пос. Новое Доскино
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_03.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «Долго выбирал теплицу, облазил все сайты, выписал цены, потом объехал все места продаж, чтобы посмотреть и пощупать теплицу. Здесь мне больше всего понравилось, т.к качество на высоте и хорошие цены. Заказал теплицу в офисе, на следующий день мне ее привезли и собрали. Собрали все быстро и качественно. Жду тепла, чтобы высадить помидорчики. Всем соседям рекомендую покупать у вас.»
+                  </p>
+                  <p class="slider-reviews__user-name">Дмитрий Зверев, 59 лет</p>
+                  <p class="slider-reviews__address">
+                    пенсионер
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_04.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «В прошлом году покупала теплицу усиленную с поликарбонатом. Заказывала по телефону, мне ее быстро привезли и собрали. Ребята молодцы, работают качественно! В этом году была снежная зима, очень переживала, что раздавит как у других соседей. Отправила внука проверить, сердце беспокоит, как никак на кровные денюшки покупала. Внук приехал, говорит стоит как новенькая, ничего с ней не случилось, а вот у соседей пораздавливало. Вот я решила еще одну купить чуть поменьше для огурчиков. Приехала в офис, оформила на хранение. Сегодня мне ее привезли и сразу собрали. Спасибо за хорошее и быстрое обслуживание!»
+                  </p>
+                  <p class="slider-reviews__user-name">Алена Еремина</p>
+                  <p class="slider-reviews__address">
+                    пенсионерка
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_05.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «Времени у меня особо нет, чтоб ездить по офисам рассматривать. Заказал теплицу по рекомендации соседей. Оставил заявку на сайте, мне быстро перезвонили, проконсультировали по выбору теплицы и приняли заказ на доставку. Привезли на выходных, как договаривались. Качество на высоте. Рекомендую»
+                  </p>
+                  <p class="slider-reviews__user-name">Егор Гришин, 39 лет</p>
+                  <p class="slider-reviews__address"></p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_06.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    «Давно мечтал о теплице из сотового поликарбоната, соседи уже давно поставили а у меня не было возможности, пенсия маленькая, вот я и копил. С сыном объездили много фирм продающих теплицы, здесь нам понравилось больше всего, по низкой цене и отличного качества. В офисе нам подробно рассказали про теплицы, поликарбонат и посоветовавшись с сыном, выбрали Надежную усиленную из 25 трубы с поликарбонатом 4мм и длиной 8 метров. Оформили заявку на доставку, в этот же день нам привезли. Сын сказал сам соберет и в ближайший выходной день мы ее сами собрали. Собирали часов 6, сын собирал а я придерживал. Получилась очень красивая теплица на зависть соседям, именно о такой я мечтал. Вырастил богатый урожай, помидорчики на загляденье, намного вкуснее магазинных. Рекомендую!»
+                  </p>
+                  <p class="slider-reviews__user-name">Владимир Петров, 57 лет</p>
+                  <p class="slider-reviews__address">садовод со стажем</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-reviews__container">
+                  <div class="slider-reviews__image-ibg">
+                    <img src="@img/reviews/avatar_07.jpg" alt="">
+                  </div>
+                  <p class="slider-reviews__text">
+                    В этом году у меня раздавило теплицу, восстановлению не подлежит, ее еще отец варил на заводе лет 10 назад. Приехала в сад, смотрю у большинства теплицы раздавлены, а у соседа стоит целая, хоть он в сад и не ездил, снег не убирал. Позвонила ему сразу, спросила где покупал. Он мне дал телефон и адрес. Съездила посмотрела теплицу в офисе, меня вежливо проконсультировали, посмотрела образцы метала и поликарбоната и выбрала Надежную усиленную из трубы 25мм и длиной 6 метров, и заказала на доставку на выходные. Приехала среди недели в сад с мужем , чтобы подготовить место под теплицу, разговорились с соседями у которых тоже раздавило и они решили тоже заказать теплицу и привезти в один день с нами, чтоб сэкономить на доставке и еще им сделали скидку т.к покупали сразу 3 теплицы. Если бы сразу знала, я бы их сразу с собой привела, чтобы купить со скидкой. Привезли точно в срок. Спасибо ребятам за хорошую и качественную работу!
+                  </p>
+                  <p class="slider-reviews__user-name">Жанна Молчанова</p>
+                  <p class="slider-reviews__address">садовод</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-reviews__progress-bar swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
       <section class="page__feedback feedback">
         <div class="feedback__container">
           <h2 class="feedback__title title">Магазин склад <span>в Минске</span></h2>
